added new paper that uses tsdetect

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -162,6 +162,12 @@
                 Listed below are publications that utilize our tools/datasets:
                 <ul style="font-size: small;">
                     <li>
+                        B. H. P. Camara, M. A. G. Silva, A. T. Endo, S. R. Vergilio <strong>On the use of test smells
+                            for prediction of flaky tests</strong>. In Proceedings of the 6th Brazilian Symposium on
+                        Systematic and Automated Software Testing (SAST 21).
+                        https://arxiv.org/abs/2108.11781
+                    </li>
+                    <li style="padding: 5px 0px;">
                         Kim, D.J., Chen, TH.(. & Yang, J. <strong>The secret life of test smells - an empirical study on test
                         smell evolution and maintenance</strong>. Empir Software Eng 26, 100 (2021).
                         https://doi.org/10.1007/s10664-021-09969-1
