added new publication that utilizes tsdetect

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -162,6 +162,12 @@
                 Listed below are publications that utilize our tools/datasets:
                 <ul style="font-size: small;">
                     <li>
+                        Islem Saidani and Ali Ouni. 2021.
+                        <strong>Toward a Smell-aware Prediction Model for CI Build Failures</strong>.
+                        In Proceedings of the 5th International Workshop on Refactoring (IWoR 2021). Association for
+                        Computing Machinery, New York, NY, USA.
+                    </li>
+                    <li>
                         B. H. P. Camara, M. A. G. Silva, A. T. Endo, S. R. Vergilio <strong>On the use of test smells
                             for prediction of flaky tests</strong>. In Proceedings of the 6th Brazilian Symposium on
                         Systematic and Automated Software Testing (SAST 21).
