--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -159,7 +159,7 @@
             </p>
             <br>
             <p>
-                Listed below are publications that utilize our tools/datasets:
+                <span id='external'>Listed below are publications that utilize our tools/datasets:</span>
                 <ul style="font-size: small;">
                     <li>
                         Islem Saidani and Ali Ouni. 2021.
